manifiesto/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Abastecimiento_de_Producto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abastecimiento de Producto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Almacenamiento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Almacenamiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atencion_de_Naves__c</fullName>
        <label>Atención de Naves</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ventana</fullName>
                </value>
                <value>
                    <fullName>Orden de llegada</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carga_Camiones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carga Camiones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carga_Naves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carga Naves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comentario_Capacidad_Excedida__c</fullName>
        <label>Comentario Capacidad Excedida</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comentario_Reajuste__c</fullName>
        <label>Comentario Reajuste</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conciliacion_de_Inventario__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conciliación de Inventario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condicion_Capacidad_Excedida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Condición Capacidad Excedida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condiciones_Especiales_de_Facturacion__c</fullName>
        <inlineHelpText>Ejemplo: Facturación día 26, Cobro de Muellaje a Cliente u otros alcances</inlineHelpText>
        <label>Condiciones Especiales de Facturación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condiciones_Especiales_de_Operacion__c</fullName>
        <label>Condiciones Especiales de Operación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Descarga_Camiones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descarga Camiones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descarga_Naves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descarga Naves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frecuencia_Reajuste__c</fullName>
        <label>Frecuencia Reajuste</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frecuencia_de_Conciliacion__c</fullName>
        <label>Frecuencia de Conciliación de Inventario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frecuencia_de_Proforma__c</fullName>
        <label>Frecuencia de Proforma</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frecuencia_de_reunion__c</fullName>
        <label>Frecuencia de Reunión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inicio_de_reajustes__c</fullName>
        <label>Inicio de reajustes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inicio_hitos__c</fullName>
        <label>Inicio hitos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_Documento__c</fullName>
        <label>Link Documento</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contratos</relationshipLabel>
        <relationshipName>Contratos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Otros_Servicios__c</fullName>
        <label>Otros Servicios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Otros__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Otros servicios</description>
        <label>Otros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rango_de_Tolerancia_Control_Inventario__c</fullName>
        <inlineHelpText>Ejemplo: 1% anual, 2% mensual</inlineHelpText>
        <label>Rango de Tolerancia Control Inventario</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rates_de_Transferencia_de_Naves__c</fullName>
        <inlineHelpText>Ejemplo: TM/HR, M3/HR, No Aplica</inlineHelpText>
        <label>Rates de Transferencia de Naves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renovacion_Automatica__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marca si el contrato tiene renovación automática</inlineHelpText>
        <label>Renovación Automática</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reunion_Gestion_Cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reunión Gestión Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicios_Logisticos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servicios Logísticos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiene_Proforma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Tiene Proforma?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiene_Reajuste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Tiene Reajuste?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <inlineHelpText>Contrato (Contrato, Addendum) 
Acuerdo (Memorandum, Carta Intención)</inlineHelpText>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acuerdo</fullName>
                </value>
                <value>
                    <fullName>Contrato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transferencia_por_Ducto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferencia por Ducto</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Generales</fullName>
        <active>true</active>
        <label>Generales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Terminales_Maritimos</fullName>
        <active>true</active>
        <label>Terminales Marítimos</label>
    </recordTypes>
</CustomObject>